--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="reservation" id="Book-a-table"></section>
+        <section class="menu" id="menu"></section>
+        <section class="about" id="contacts"></section>
       </main>
       <footer class="footer"></footer>
     </div>
