--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
           </div>
         </section>
-        <section class="reservation" id="Book-a-table"></section>
+        <section class="reservation" id="book-a-table"></section>
         <section class="menu" id="menu"></section>
         <section class="about" id="contacts"></section>
       </main>
