--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           </p>
         </div>
       </header>
-
       <main class="content">
+        <!--Recipes-->
         <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
@@ -96,7 +96,58 @@
             </div>
           </div>
         </section>
-        <section class="reservation" id="book-a-table"></section>
+        <!--Reservation Form-->
+        <section class="reservation" id="book-a-table">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form__label">
+                Name *
+                <input
+                  type="text"
+                  class="form__input"
+                  id="name"
+                  name="name"
+                  placeholder="Name Surname"
+                />
+              </label>
+              <label for="number of guest" class="form__label">
+                Number of guests *
+                <input
+                  type="number"
+                  class="form__input"
+                  id="number of guests"
+                  name="Number of guests"
+                  placeholder="1-8"
+                />
+              </label>
+              <label for="Date & time" class="form__label">
+                Date & time *
+                <input
+                  type="datetime-local"
+                  class="form__input"
+                  id="Date & time"
+                  name="date & time"
+                />
+              </label>
+              <label for="email" class="form__label">
+                Your email *
+                <input
+                  type="email"
+                  class="form__input"
+                  id="email"
+                  name="email"
+                  placeholder="email@email.com"
+                />
+              </label>
+            </fieldset>
+            <button type="button" class="form__button">Book a table</button>
+            <label for="checkbox" class="form__label form__label_type_checkbox">
+              <input type="checkbox" class="form__checkbox" />I agree with the
+              terms of use
+            </label>
+          </form>
+        </section>
         <section class="menu" id="menu"></section>
         <section class="about" id="contacts"></section>
       </main>
