--- a/index.html
+++ b/index.html
@@ -111,22 +111,22 @@
                   placeholder="Name Surname"
                 />
               </label>
-              <label for="number of guest" class="form__label">
+              <label for="number-of-guests" class="form__label">
                 Number of guests *
                 <input
                   type="number"
                   class="form__input"
-                  id="number of guests"
+                  id="number-of-guests"
                   name="Number of guests"
                   placeholder="1-8"
                 />
               </label>
-              <label for="Date & time" class="form__label">
+              <label for="Date-&-time" class="form__label">
                 Date & time *
                 <input
                   type="datetime-local"
                   class="form__input"
-                  id="Date & time"
+                  id="Date-&-time"
                   name="date & time"
                 />
               </label>
