--- a/index.html
+++ b/index.html
@@ -143,8 +143,12 @@
             </fieldset>
             <button type="button" class="form__button">Book a table</button>
             <label for="checkbox" class="form__label form__label_type_checkbox">
-              <input type="checkbox" class="form__checkbox" />I agree with the
-              terms of use
+              <input
+                type="checkbox"
+                class="form__checkbox"
+                id="checkbox"
+                name="checkbox"
+              />I agree with the terms of use
             </label>
           </form>
         </section>
