--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="HTML, CSS" />
     <title>Coffee Shop</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +41,7 @@
             </li>
           </ul>
         </nav>
-        <!--header page-->
+        <!--Header Page-->
         <h1 class="header__title">
           <span class="header__span-accent">Specialty coffee</span> in the
           Triple Peaks Library
@@ -67,95 +66,244 @@
           </p>
         </div>
       </header>
-      <main class="content">
-        <!--Recipes-->
-        <section class="recipes" id="recipes">
-          <h2 class="recipes__title">Recipes</h2>
-          <p class="recipes__subtitle">
-            Check out some recipes we've collected for your home-brewing
-            convenience:
-          </p>
-          <div class="recipes__videos">
-            <div>
-              <iframe
-                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
-                class="recipes__iframe"
-              ></iframe>
-              <p class="recipes__video-caption">
-                <span>Areopress recipe</span><span>~5 min</span>
-              </p>
-            </div>
-            <div>
-              <iframe
-                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
-                class="recipes__iframe"
-              ></iframe>
-              <p class="recipes__video-caption">
-                <span>French press recipe</span><span>~15 min</span>
-              </p>
-            </div>
+
+      <!--Recipes-->
+      <section class="recipes" id="recipes">
+        <h2 class="recipes__title">Recipes</h2>
+        <p class="recipes__subtitle">
+          Check out some recipes we've collected for your home-brewing
+          convenience:
+        </p>
+        <div class="recipes__videos">
+          <div>
+            <iframe
+              src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
+              class="recipes__iframe"
+            ></iframe>
+            <p class="recipes__video-caption">
+              <span>Areopress recipe</span><span>~5 min</span>
+            </p>
           </div>
-        </section>
-        <!--Reservation Form-->
-        <section class="reservation" id="book-a-table">
-          <h2 class="reservation__title">Book a table</h2>
-          <form class="reservation__form form">
-            <fieldset class="form__fieldset">
-              <label for="name" class="form__label">
-                Name *
-                <input
-                  type="text"
-                  class="form__input"
-                  id="name"
-                  name="name"
-                  placeholder="Name Surname"
-                />
-              </label>
-              <label for="number-of-guests" class="form__label">
-                Number of guests *
-                <input
-                  type="number"
-                  class="form__input"
-                  id="number-of-guests"
-                  name="Number of guests"
-                  placeholder="1-8"
-                />
-              </label>
-              <label for="Date-&-time" class="form__label">
-                Date & time *
-                <input
-                  type="datetime-local"
-                  class="form__input"
-                  id="Date-&-time"
-                  name="date & time"
-                />
-              </label>
-              <label for="email" class="form__label">
-                Your email *
-                <input
-                  type="email"
-                  class="form__input"
-                  id="email"
-                  name="email"
-                  placeholder="email@email.com"
-                />
-              </label>
-            </fieldset>
-            <button type="button" class="form__button">Book a table</button>
-            <label for="checkbox" class="form__label form__label_type_checkbox">
+          <div>
+            <iframe
+              src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
+              class="recipes__iframe"
+            ></iframe>
+            <p class="recipes__video-caption">
+              <span>French press recipe</span><span>~15 min</span>
+            </p>
+          </div>
+        </div>
+      </section>
+      <!--Reservation Form-->
+      <section class="reservation" id="book-a-table">
+        <h2 class="reservation__title">Book a table</h2>
+        <form class="reservation__form form">
+          <fieldset class="form__fieldset">
+            <label for="name" class="form__label">
+              Name *
               <input
-                type="checkbox"
-                class="form__checkbox"
-                id="checkbox"
-                name="checkbox"
-              />I agree with the terms of use
+                type="text"
+                class="form__input"
+                id="name"
+                name="name"
+                placeholder="Name Surname"
+              />
             </label>
-          </form>
-        </section>
-        <section class="menu" id="menu"></section>
-        <section class="about" id="contacts"></section>
-      </main>
-      <footer class="footer"></footer>
+            <label for="number-of-guests" class="form__label">
+              Number of guests *
+              <input
+                type="number"
+                class="form__input"
+                id="number-of-guests"
+                name="Number of guests"
+                placeholder="1-8"
+              />
+            </label>
+            <label for="Date-&-time" class="form__label">
+              Date & time *
+              <input
+                type="datetime-local"
+                class="form__input"
+                id="Date-&-time"
+                name="date & time"
+              />
+            </label>
+            <label for="email" class="form__label">
+              Your email *
+              <input
+                type="email"
+                class="form__input"
+                id="email"
+                name="email"
+                placeholder="email@email.com"
+              />
+            </label>
+          </fieldset>
+          <button type="button" class="form__button">Book a table</button>
+          <label for="checkbox" class="form__label form__label_type_checkbox">
+            <input
+              type="checkbox"
+              class="form__checkbox"
+              id="checkbox"
+              name="checkbox"
+            />I agree with the terms of use
+          </label>
+        </form>
+      </section>
+      <!--Menu-->
+      <section class="menu" id="menu">
+        <h1 class="menu__title">Menu</h1>
+        <p class="menu__subtitle">
+          We brew coffee from locally roasted, Fairtrade certified beans and use
+          biodegradable cups. All teas from our collection are $2/cup.
+        </p>
+        <ul class="menu__cards">
+          <!--Filter Card-->
+          <li class="card">
+            <h3 class="card__title">Filter</h3>
+            <ul class="card__list">
+              <li class="card__list-item">
+                Regular (12 oz)
+                <span class="card__list-divider"></span>
+                $1
+              </li>
+              <li class="card__list-item">
+                Large (16 oz)
+                <span class="card__list-divider"></span>
+                $1.25
+              </li>
+              <li class="card__list-item">
+                XL (20 oz)
+                <span class="card__list-divider"></span>
+                $1.5
+              </li>
+              <li class="card__list-item">
+                Party-size (24 oz, decaf)
+                <span class="card__list-divider"></span>
+                $1.75
+              </li>
+              <li class="card__list-item">
+                Iced coffee (16 oz)
+                <span class="card__list-divider"></span>
+                $1.25
+              </li>
+            </ul>
+          </li>
+          <!--Expresso Card-->
+          <li class="card">
+            <h3 class="card__title">Expresso</h3>
+            <ul class="card__list">
+              <li class="card__list-item">
+                Macchiato
+                <span class="card__list-divider"></span>
+                $2.25
+              </li>
+              <li class="card__list-item">
+                Cortado
+                <span class="card__list-divider"></span>
+                $2.5
+              </li>
+              <li class="card__list-item">
+                Mocha
+                <span class="card__list-divider"></span>
+                $3
+              </li>
+              <li class="card__list-item">
+                Sunrise in the bay area (decaf)
+                <span class="card__list-divider"></span>
+                $10
+              </li>
+            </ul>
+          </li>
+          <!--Baked Goods Card-->
+          <li class="card">
+            <h3 class="card__title">Baked Goods</h3>
+            <ul class="card__list">
+              <li class="card__list-item">
+                Almond Croissant
+                <span class="card__list-divider"></span>
+                $2
+              </li>
+              <li class="card__list-item">
+                Banana Bread
+                <span class="card__list-divider"></span>
+                $1.75
+              </li>
+              <li class="card__list-item">
+                Key Lime Pie
+                <span class="card__list-divider"></span>
+                $3
+              </li>
+              <li class="card__list-item">
+                Blue Velvet Cake
+                <span class="card__list-divider"></span>
+                $3.75
+              </li>
+              <li class="card__list-item">
+                Web Cookie
+                <span class="card__list-divider"></span>
+                $2
+              </li>
+              <li class="card__list-item">
+                Fresh Burg'uette
+                <span class="card__list-divider"></span>
+                $0.25
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <!--About Section-->
+      <section class="about" id="contacts">
+        <h2 class="about__title">About the coffee Shop</h2>
+        <div class="about__content">
+          <p>
+            Our coffee shop is located in the Triple Peaks Library. It features
+            6 tables and free WiFi.
+          </p>
+          <p>Our main mission is keeping guests cozy and energized.</p>
+          <p>
+            Besides that, we try to reduce our environmental impact — so we
+            don't sell single-use cups. But you can buy one of our reusable
+            cups!
+          </p>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </div>
+      </section>
+      <!--Footer Section-->
+      <footer class="footer" id="contacts">
+        <div class="footer__content">
+          <img
+            src="./images/logo_coffeeshop_light.svg"
+            alt="footer logo"
+            class="footer__logo"
+          />
+          <ul class="footer__list">
+            <h3 class="footer__social_heading">Social Media</h3>
+            <li class="footer__list_item">
+              <a class="footer__social_link">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="facebook logo"
+                  class="footer__social_icon"
+                />Facebook</a
+              >
+            </li>
+            <li class="footer__list_item">
+              <a class="footer__social_link">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="instagram logo"
+                  class="footer__social_icon"
+                />Instagram</a
+              >
+            </li>
+          </ul>
+        </div>
+        <p class="footer__copyright">&copy;2024 Stanley</p>
+      </footer>
     </div>
   </body>
 </html>
