--- a/index.html
+++ b/index.html
@@ -66,212 +66,220 @@
           </p>
         </div>
       </header>
-
-      <!--Recipes-->
-      <section class="recipes" id="recipes">
-        <h2 class="recipes__title">Recipes</h2>
-        <p class="recipes__subtitle">
-          Check out some recipes we've collected for your home-brewing
-          convenience:
-        </p>
-        <div class="recipes__videos">
-          <div>
-            <iframe
-              src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
-              class="recipes__iframe"
-            ></iframe>
-            <p class="recipes__video-caption">
-              <span>Areopress recipe</span><span>~5 min</span>
-            </p>
-          </div>
-          <div>
-            <iframe
-              src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
-              class="recipes__iframe"
-            ></iframe>
-            <p class="recipes__video-caption">
-              <span>French press recipe</span><span>~15 min</span>
-            </p>
-          </div>
-        </div>
-      </section>
-      <!--Reservation Form-->
-      <section class="reservation" id="book-a-table">
-        <h2 class="reservation__title">Book a table</h2>
-        <form class="reservation__form form">
-          <fieldset class="form__fieldset">
-            <label for="name" class="form__label">
-              Name *
-              <input
-                type="text"
-                class="form__input"
-                id="name"
-                name="name"
-                placeholder="Name Surname"
-              />
-            </label>
-            <label for="number-of-guests" class="form__label">
-              Number of guests *
-              <input
-                type="number"
-                class="form__input"
-                id="number-of-guests"
-                name="Number of guests"
-                placeholder="1-8"
-              />
-            </label>
-            <label for="Date-&-time" class="form__label">
-              Date & time *
-              <input
-                type="datetime-local"
-                class="form__input"
-                id="Date-&-time"
-                name="date & time"
-              />
-            </label>
-            <label for="email" class="form__label">
-              Your email *
-              <input
-                type="email"
-                class="form__input"
-                id="email"
-                name="email"
-                placeholder="email@email.com"
-              />
-            </label>
-          </fieldset>
-          <button type="button" class="form__button">Book a table</button>
-          <label for="checkbox" class="form__label form__label_type_checkbox">
-            <input
-              type="checkbox"
-              class="form__checkbox"
-              id="checkbox"
-              name="checkbox"
-            />I agree with the terms of use
-          </label>
-        </form>
-      </section>
-      <!--Menu-->
-      <section class="menu" id="menu">
-        <h1 class="menu__title">Menu</h1>
-        <p class="menu__subtitle">
-          We brew coffee from locally roasted, Fairtrade certified beans and use
-          biodegradable cups. All teas from our collection are $2/cup.
-        </p>
-        <ul class="menu__cards">
-          <!--Filter Card-->
-          <li class="card">
-            <h3 class="card__title">Filter</h3>
-            <ul class="card__list">
-              <li class="card__list-item">
-                Regular (12 oz)
-                <span class="card__list-divider"></span>
-                $1
-              </li>
-              <li class="card__list-item">
-                Large (16 oz)
-                <span class="card__list-divider"></span>
-                $1.25
-              </li>
-              <li class="card__list-item">
-                XL (20 oz)
-                <span class="card__list-divider"></span>
-                $1.5
-              </li>
-              <li class="card__list-item">
-                Party-size (24 oz, decaf)
-                <span class="card__list-divider"></span>
-                $1.75
-              </li>
-              <li class="card__list-item">
-                Iced coffee (16 oz)
-                <span class="card__list-divider"></span>
-                $1.25
-              </li>
-            </ul>
-          </li>
-          <!--Expresso Card-->
-          <li class="card">
-            <h3 class="card__title">Expresso</h3>
-            <ul class="card__list">
-              <li class="card__list-item">
-                Macchiato
-                <span class="card__list-divider"></span>
-                $2.25
-              </li>
-              <li class="card__list-item">
-                Cortado
-                <span class="card__list-divider"></span>
-                $2.5
-              </li>
-              <li class="card__list-item">
-                Mocha
-                <span class="card__list-divider"></span>
-                $3
-              </li>
-              <li class="card__list-item">
-                Sunrise in the bay area (decaf)
-                <span class="card__list-divider"></span>
-                $10
-              </li>
-            </ul>
-          </li>
-          <!--Baked Goods Card-->
-          <li class="card">
-            <h3 class="card__title">Baked Goods</h3>
-            <ul class="card__list">
-              <li class="card__list-item">
-                Almond Croissant
-                <span class="card__list-divider"></span>
-                $2
-              </li>
-              <li class="card__list-item">
-                Banana Bread
-                <span class="card__list-divider"></span>
-                $1.75
-              </li>
-              <li class="card__list-item">
-                Key Lime Pie
-                <span class="card__list-divider"></span>
-                $3
-              </li>
-              <li class="card__list-item">
-                Blue Velvet Cake
-                <span class="card__list-divider"></span>
-                $3.75
-              </li>
-              <li class="card__list-item">
-                Web Cookie
-                <span class="card__list-divider"></span>
-                $2
-              </li>
-              <li class="card__list-item">
-                Fresh Burg'uette
-                <span class="card__list-divider"></span>
-                $0.25
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-      <!--About Section-->
-      <section class="about" id="contacts">
-        <h2 class="about__title">About the coffee Shop</h2>
-        <div class="about__content">
-          <p>
-            Our coffee shop is located in the Triple Peaks Library. It features
-            6 tables and free WiFi.
+      <main>
+        <!--Recipes-->
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
           </p>
-          <p>Our main mission is keeping guests cozy and energized.</p>
-          <p>
-            Besides that, we try to reduce our environmental impact — so we
-            don't sell single-use cups. But you can buy one of our reusable
-            cups!
+          <ul class="recipes__videos">
+            <li>
+              <iframe
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
+                class="recipes__iframe"
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>Areopress recipe</span><span>~5 min</span>
+              </p>
+            </li>
+            <li>
+              <iframe
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=hpt3T-rnewwyV-Qi"
+                class="recipes__iframe"
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span><span>~15 min</span>
+              </p>
+            </li>
+          </ul>
+        </section>
+        <!--Reservation Form-->
+        <section class="reservation" id="book-a-table">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form__label">
+                Name *
+                <input
+                  type="text"
+                  class="form__input"
+                  id="name"
+                  name="name"
+                  placeholder="Name Surname"
+                  (required)
+                />
+              </label>
+              <label for="number-of-guests" class="form__label">
+                Number of guests *
+                <input
+                  type="number"
+                  class="form__input"
+                  id="number-of-guests"
+                  name="Number of guests"
+                  placeholder="1-8"
+                  (required)
+                />
+              </label>
+              <label for="Date-&-time" class="form__label">
+                Date & time *
+                <input
+                  type="datetime-local"
+                  class="form__input"
+                  id="Date-&-time"
+                  name="date & time"
+                  (required)
+                />
+              </label>
+              <label for="email" class="form__label">
+                Your email *
+                <input
+                  type="email"
+                  class="form__input"
+                  id="email"
+                  name="email"
+                  placeholder="email@email.com"
+                  (required)
+                />
+              </label>
+            </fieldset>
+            <button type="button" class="form__button">Book a table</button>
+            <label for="checkbox" class="form__label form__label_type_checkbox">
+              <input
+                type="checkbox"
+                class="form__checkbox"
+                id="checkbox"
+                name="checkbox"
+                (required)
+              />I agree with the terms of use
+            </label>
+          </form>
+        </section>
+        <!--Menu-->
+        <section class="menu" id="menu">
+          <h2 class="menu__title">Menu</h2>
+          <p class="menu__subtitle">
+            We brew coffee from locally roasted, Fairtrade certified beans and
+            use biodegradable cups. All teas from our collection are $2/cup.
           </p>
-          <div class="about__circle"></div>
-          <div class="about__circle about__circle_animation_blurred"></div>
-        </div>
-      </section>
+          <ul class="menu__cards">
+            <!--Filter Card-->
+            <li class="card">
+              <h3 class="card__title">Filter</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Regular (12 oz)
+                  <span class="card__list-divider"></span>
+                  $1
+                </li>
+                <li class="card__list-item">
+                  Large (16 oz)
+                  <span class="card__list-divider"></span>
+                  $1.25
+                </li>
+                <li class="card__list-item">
+                  XL (20 oz)
+                  <span class="card__list-divider"></span>
+                  $1.5
+                </li>
+                <li class="card__list-item">
+                  Party-size (24 oz, decaf)
+                  <span class="card__list-divider"></span>
+                  $1.75
+                </li>
+                <li class="card__list-item">
+                  Iced coffee (16 oz)
+                  <span class="card__list-divider"></span>
+                  $1.25
+                </li>
+              </ul>
+            </li>
+            <!--Expresso Card-->
+            <li class="card">
+              <h3 class="card__title">Expresso</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Macchiato
+                  <span class="card__list-divider"></span>
+                  $2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado
+                  <span class="card__list-divider"></span>
+                  $2.5
+                </li>
+                <li class="card__list-item">
+                  Mocha
+                  <span class="card__list-divider"></span>
+                  $3
+                </li>
+                <li class="card__list-item">
+                  Sunrise in the bay area (decaf)
+                  <span class="card__list-divider"></span>
+                  $10
+                </li>
+              </ul>
+            </li>
+            <!--Baked Goods Card-->
+            <li class="card">
+              <h3 class="card__title">Baked Goods</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Almond Croissant
+                  <span class="card__list-divider"></span>
+                  $2
+                </li>
+                <li class="card__list-item">
+                  Banana Bread
+                  <span class="card__list-divider"></span>
+                  $1.75
+                </li>
+                <li class="card__list-item">
+                  Key Lime Pie
+                  <span class="card__list-divider"></span>
+                  $3
+                </li>
+                <li class="card__list-item">
+                  Blue Velvet Cake
+                  <span class="card__list-divider"></span>
+                  $3.75
+                </li>
+                <li class="card__list-item">
+                  Web Cookie
+                  <span class="card__list-divider"></span>
+                  $2
+                </li>
+                <li class="card__list-item">
+                  Fresh Burg'uette
+                  <span class="card__list-divider"></span>
+                  $0.25
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+        <!--About Section-->
+        <section class="about">
+          <h2 class="about__title">About the coffee Shop</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+            <div class="about__circle"></div>
+            <div class="about__circle about__circle_animation_blurred"></div>
+          </div>
+        </section>
+      </main>
       <!--Footer Section-->
       <footer class="footer" id="contacts">
         <div class="footer__content">
@@ -280,27 +288,29 @@
             alt="footer logo"
             class="footer__logo"
           />
-          <ul class="footer__list">
+          <div>
             <h3 class="footer__social_heading">Social Media</h3>
-            <li class="footer__list_item">
-              <a class="footer__social_link">
-                <img
-                  src="./images/facebook_white.svg"
-                  alt="facebook logo"
-                  class="footer__social_icon"
-                />Facebook</a
-              >
-            </li>
-            <li class="footer__list_item">
-              <a class="footer__social_link">
-                <img
-                  src="./images/instagram_white.svg"
-                  alt="instagram logo"
-                  class="footer__social_icon"
-                />Instagram</a
-              >
-            </li>
-          </ul>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__social-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="facebook logo"
+                    class="footer__social-icon"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__social-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="instagram logo"
+                    class="footer__social-icon"
+                  />Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
         <p class="footer__copyright">&copy;2024 Stanley</p>
       </footer>
