project stage 4 update #3

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
               <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="#menu" class="nav__link">Menu</a>
+              <a href="#book-a-table" class="nav__link">Book a table</a>
             </li>
             <li>
-              <a href="#book-a-table" class="nav__link">Book a table</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
               <a href="#contacts" class="nav__link">Contacts</a>
@@ -108,7 +108,7 @@
                   id="name"
                   name="name"
                   placeholder="Name Surname"
-                  (required)
+                  required
                 />
               </label>
               <label for="number-of-guests" class="form__label">
@@ -119,7 +119,7 @@
                   id="number-of-guests"
                   name="Number of guests"
                   placeholder="1-8"
-                  (required)
+                  required
                 />
               </label>
               <label for="Date-&-time" class="form__label">
@@ -129,7 +129,7 @@
                   class="form__input"
                   id="Date-&-time"
                   name="date & time"
-                  (required)
+                  required
                 />
               </label>
               <label for="email" class="form__label">
@@ -140,7 +140,7 @@
                   id="email"
                   name="email"
                   placeholder="email@email.com"
-                  (required)
+                  required
                 />
               </label>
             </fieldset>
@@ -151,7 +151,7 @@
                 class="form__checkbox"
                 id="checkbox"
                 name="checkbox"
-                (required)
+                required
               />I agree with the terms of use
             </label>
           </form>
@@ -289,7 +289,7 @@
             class="footer__logo"
           />
           <div>
-            <h3 class="footer__social_heading">Social Media</h3>
+            <h3 class="footer__social-heading">Social Media</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a class="footer__social-link">
@@ -306,7 +306,8 @@
                     src="./images/instagram_white.svg"
                     alt="instagram logo"
                     class="footer__social-icon"
-                  />Instagram</a
+                  />
+                  Instagram</a
                 >
               </li>
             </ul>
